[package]
name = "kibodo"
version = "0.1.0"
edition = "2021"
authors = ["Geobert Quach <geobret@proton.me>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["canvas", "tokio"] }
iced_native = "0.9.1"
imstr = "0.1.0"
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
webtype = "0.2.1"
